--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -5,12 +5,29 @@
   background-color: $color-white;
   border-radius: 0.3rem;
   padding: 6rem;
+  padding-left: 9rem;
   font-size: $default-font-size;
+  transform: skewX(-12deg);
 
   &__shape {
     width: 15rem;
     height: 15rem;
     float: left;
-    background-color: orangered;
+
+    //object has to be floated and have set values for this to work
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
+  }
+
+  &__image {
+    height: 100%;
+  }
+
+  &__text {
+    transform: skewX(12deg);
   }
 }
