--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -13,6 +13,7 @@
     width: 15rem;
     height: 15rem;
     float: left;
+    position: relative;
 
     //object has to be floated and have set values for this to work
     -webkit-shape-outside: circle(50% at 50% 50%);
@@ -25,9 +26,33 @@
 
   &__image {
     height: 100%;
+    transform: translateX(-4rem);
+    backface-visibility: hidden;
   }
 
   &__text {
     transform: skewX(12deg);
+  }
+
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: $color-white;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden;
+  }
+
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+
+  &:hover &__img {
   }
 }
