--- a/css/style.css
+++ b/css/style.css
@@ -345,8 +345,9 @@ body {
     transform: translateX(-3rem) skewX(12deg); }
   .story__image {
     height: 100%;
-    transform: translateX(-4rem);
-    backface-visibility: hidden; }
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all 0.5s; }
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
@@ -364,6 +365,9 @@ body {
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
+  .story:hover .story__image {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
 
 .row {
   max-width: 114rem;
