--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -26,8 +26,9 @@
 
   &__image {
     height: 100%;
-    transform: translateX(-4rem);
+    transform: translateX(-4rem) scale(1.4);
     backface-visibility: hidden;
+    transition: all 0.5s;
   }
 
   &__text {
@@ -53,6 +54,8 @@
     transform: translate(-50%, -50%);
   }
 
-  &:hover &__img {
+  &:hover &__image {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
   }
 }
