--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,6 @@
 .btn {
+  //just "&" applies the styles to just btn elements
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,6 +11,10 @@
     transition: all 0.2s;
     position: relative;
     font-size: $default-font-size;
+
+    //Changefor the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -22,7 +28,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
