--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,8 @@ body {
   z-index: 9999;
   transition: all 0.3s;
   opacity: 0;
-  visibility: hidden; }
+  visibility: hidden;
+  transition: all 0.3s; }
   .popup__close:link, .popup__close:visited {
     color: #777;
     position: absolute;
@@ -454,13 +455,17 @@ body {
     border-radius: 3px;
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.5); }
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.4s 0.2s; }
     .popup__content:target {
       opacity: 1;
       visibility: visible; }
   .popup:target {
     opacity: 1;
     visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
   .popup__left {
     width: 33.333%;
     display: table-cell; }
@@ -474,7 +479,7 @@ body {
     width: 100%; }
   .popup__text {
     font-size: 1.4rem;
-    padding-bottom: 4rem;
+    margin-bottom: 4rem;
     -moz-column-count: 2;
     -moz-column-gap: 4rem;
     -moz-column-rule: 1px solid #eee;
