--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,7 @@
 
   opacity: 0;
   visibility: hidden;
+  transition: all 0.3s;
 
   &__close {
     &:link,
@@ -40,23 +41,24 @@
     border-radius: 3px;
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.5);
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.4s 0.2s;
 
     &:target {
       opacity: 1;
       visibility: visible;
     }
-
-    &:target &__content {
-    }
   }
 
+  //Open states
   &:target {
     opacity: 1;
     visibility: visible;
   }
 
   &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
   }
 
   &__left {
@@ -78,7 +80,7 @@
 
   &__text {
     font-size: 1.4rem;
-    padding-bottom: 4rem;
+    margin-bottom: 4rem;
 
     -moz-column-count: 2;
     -moz-column-gap: 4rem;
