--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/* 
+0 - 600px: phone
+600 - 900px: tablet portrait
+900 - 1200px: tablet landscape
+[1200 - 1800] is where the normal styles apply
+1800px + : Big desktop
+
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+ORDER: Base + typography > general layout + grid > page layout > components
+
+ em is the best option for media queries 1em = 16px;
+ */
 *,
 *::after,
 *::before {
@@ -7,7 +24,21 @@
 
 html {
   /* This defines what 1rem is. */
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  /*  @include respond(phone) {
+    font-size: 50%;
+  }
+same as tab-port so not needed
+  */ }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
