--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,6 +14,11 @@
     animation-duration: 1s;
     animation-timing-function: ease-out;
 
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
+
     /*
         animation-delay: 3s;
         animation-iteration-count: 3;
@@ -26,6 +31,10 @@
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      font-size: 0.5rem;
+    }
   }
 }
 
@@ -35,10 +44,17 @@ body {
   /*   font-size: 1.6rem; */
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-secondary {
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
+
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
