--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -13,6 +13,7 @@
 
   @include respond(tab-port) {
     max-width: 50rem;
+    padding: 0 3rem;
   }
 
   @include clearfix;
@@ -30,11 +31,15 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include respond(tab-port) {
+        margin-right: 0;
+        margin-bottom: $gutter-vertical-small;
+      }
     }
 
     @include respond(tab-port) {
-      margin-right: 0;
-      margin-bottom: $gutter-vertical-small;
+      width: 100% !important;
     }
   }
 
