--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -13,7 +13,7 @@
       float: left;
       position: relative;
       width: 33.333%;
-      box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
     }
 
     &--p1 {
@@ -21,8 +21,8 @@
       top: -2rem;
 
       @include respond(tab-port) {
-      top: 0;
-      transform: scale(1.2);
+        top: 0;
+        transform: scale(1.2);
       }
     }
 
@@ -34,7 +34,7 @@
         top: -1;
         transform: scale(1.3);
         z-index: 100;
-        }
+      }
     }
 
     &--p3 {
@@ -45,7 +45,7 @@
         top: 1rem;
         left: 0;
         transform: scale(1.1);
-        }
+      }
     }
 
     &:hover {
