--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -16,6 +16,10 @@
     display: block;
     transition: all 0.3;
 
+    @include respond(tab-port) {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -53,6 +57,11 @@
     width: 49%;
     display: inline-block;
     margin-bottom: 2rem;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
