--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -23,15 +23,18 @@
     width: 15rem;
     height: 15rem;
     float: left;
-    position: relative;
-
-    //object has to be floated and have set values for this to work
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      //object has to be floated and have set values for this to work
+      -webkit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+    }
 
     @include respond(phone) {
       transform: translateX(-3rem) skewX(0);
